--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-slick": "^0.29.0",
+		"sass": "^1.63.3",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.1.3"
-	},
-	"devDependencies": {}
+	}
 }
