--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"autoprefixer": "10.4.14",
 		"eslint": "8.42.0",
 		"eslint-config-next": "13.4.5",
+		"framer-motion": "^10.12.16",
 		"next": "13.4.5",
 		"nodemailer": "^6.9.3",
 		"postcss": "8.4.24",
