--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"axios": "^1.4.0",
 		"eslint": "8.42.0",
 		"eslint-config-next": "13.4.5",
+		"formik": "^2.4.2",
 		"framer-motion": "^10.12.16",
 		"next": "13.4.5",
 		"nodemailer": "^6.9.3",
@@ -25,6 +26,7 @@
 		"react-slick": "^0.29.0",
 		"sass": "^1.63.3",
 		"tailwindcss": "3.3.2",
-		"typescript": "5.1.3"
+		"typescript": "5.1.3",
+		"yup": "^1.2.0"
 	}
 }
